--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,53 +1,7 @@
-      <!--  contact-Home -->
-      <div id="contact" class="contact" *ngIf = 'contactHome; else contact'>
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="titlepage">
-                     <h2>Requst A call  for You</h2>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-6">
-                  <form id="request" class="main_form">
-                     <div class="row">
-                        <div class="col-md-12 ">
-                           <input class="contactus" placeholder="Your Name" type="type" name="Your Name"> 
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Email" type="type" name="Email"> 
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">                          
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Subject" type="type" name="Subject">                          
-                        </div>
-                        <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message</textarea>
-                        </div>
-                        <div class="col-md-12">
-                           <button class="send_btn">Send</button>
-                        </div>
-                     </div>
-                  </form>
-               </div>
-               <div class="col-md-6">
-                  <div class="map_main">
-                     <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="425" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- end contact-Home -->
 
 
-<ng-template #contact>
-<div class="back_re">
+
+<div class="back_re" *ngIf = 'contactHide'>
    <div class="container">
       <div class="row">
          <div class="col-md-12">
@@ -61,9 +15,12 @@
  <!--  contact -->
  <div id="contact" class="contact">
     <div class="container">
+      <div  class="titlepage" *ngIf="contactShow">
+         <h2 *ngIf = 'contactShow'>Requst A call  for You</h2>
+       </div>
        <div class="row">
           <div class="col-md-6">
-             <form id="request" class="main_form">
+             <form id="request" class="main_form">             
                 <div class="row">
                    <div class="col-md-12 ">
                       <input class="contactus" placeholder="Your Name" type="type" name="Your Name"> 
@@ -96,5 +53,5 @@
        </div>
     </div>
  </div>
-</ng-template>
+
  <!-- end contact -->
