--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,31 +1,6 @@
-<!-- news-Home -->
-<div class="latest" *ngIf = 'newsHome; else news' >
-   <div class="container">
-      <div class="row">
-         <div class="col-md-12">
-            <div class="titlepage">
-               <h2>Latest News</h2>
-               <p>The point of using Lorem Ipsum is that it has a more-or-less</p>
-            </div>
-         </div>
-      </div>
-      <div class="row">
-         <div class="col-sm-12">
-            <div class="news_img">
-               <figure><img src="assets/images/nes.jpg" alt="#"/></figure>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
-<!-- end news-Home -->
+<!-- latest news -->
 
-
-
-
-  <!-- latest news -->
-<ng-template  #news>
-<div class="back_re" >
+<div class="back_re" *ngIf = 'newsHide' >
    <div class="container">
       <div class="row">
          <div class="col-md-12">
@@ -42,7 +17,7 @@
        <div class="row">
           <div class="col-md-12">
              <div class="titlepage">
-              
+               <h2 *ngIf = 'newsShow'>Latest News</h2>
                 <p>The point of using Lorem Ipsum is that it has a more-or-less</p>
              </div>
           </div>
@@ -56,5 +31,5 @@
        </div>
     </div>
  </div>
- </ng-template >
+
  <!-- end latest news -->
