--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -1,38 +1,4 @@
-<!-- services-Home -->
-<div  class="services" *ngIf = 'serviceHome; else service'>
-   <div class="container">
-      <div class="row">
-         <div class="col-md-12">
-            <div class="titlepage">
-               <h2>Our Services</h2>
-               <p>The point of using Lorem Ipsum is that it has a more-or-less </p>
-            </div>
-         </div>
-      </div>
-      <div class="row">
-         <div class="col-md-4">
-            <div class="se_img">
-               <figure><img src="assets/images/service1.jpg" alt="#"/></figure>
-            </div>
-         </div>
-         <div class="col-md-4">
-            <div class="se_img">
-               <figure><img src="assets/images/service2.jpg" alt="#"/></figure>
-            </div>
-         </div>
-         <div class="col-md-4">
-            <div class="se_img">
-               <figure><img src="assets/images/service3.jpg" alt="#"/></figure>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
-<!-- end services-Home -->
-
-
- <ng-template #service>
-<div class="back_re"  >
+<div class="back_re"  *ngIf = 'showService'>
    <div class="container">
       <div class="row">
          <div class="col-md-12">
@@ -49,6 +15,7 @@
        <div class="row">
           <div class="col-md-12">
              <div class="titlepage">
+               <h2 *ngIf = 'hideService'>Our Services</h2>
                 <p>The point of using Lorem Ipsum is that it has a more-or-less </p>
              </div>
           </div>
@@ -73,7 +40,6 @@
     </div>
  </div>
  <!-- end home-services -->
- </ng-template>
 
 
 
