--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -1,56 +1,4 @@
-  <!-- trainers-Home -->
-  <div  class="trainers" *ngIf = "trainerHome; else trainer">
-   <div class="container">
-      <div class="row">
-         <div class="col-md-12">
-            <div class="titlepage">
-               <h2>Our Trainers</h2>
-               <p>Lorem Ipsum available, but the majority have suffered </p>
-            </div>
-         </div>
-      </div>
-      <div class="row">
-         <div class="col-md-4">
-            <div id="trai" class="trainer_box">
-               <div class="trainer_img">
-                  <figure><img src="assets/images/tra.jpg" alt="#"/></figure>
-               </div>
-               <div class="trainer">
-                  <h3>sandy Mark </h3>
-                  <p>architecture</p>
-               </div>
-            </div>
-         </div>
-         <div class="col-md-4">
-            <div id="trai" class="trainer_box">
-               <div class="trainer_img">
-                  <figure><img src="assets/images/tra0.jpg" alt="#"/></figure>
-               </div>
-               <div class="trainer">
-                  <h3>limijack </h3>
-                  <p>Maping</p>
-               </div>
-            </div>
-         </div>
-         <div class="col-md-4">
-            <div id="trai" class="trainer_box">
-               <div class="trainer_img">
-                  <figure><img src="assets/images/tra1.jpg" alt="#"/></figure>
-               </div>
-               <div class="trainer">
-                  <h3>smith den </h3>
-                  <p>Metarial</p>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
-<!-- end trainers-Home -->
-
-
-<ng-template #trainer>
-   <div class="back_re">
+   <div class="back_re" *ngIf = 'trainerHide'>
       <div class="container">
          <div class="row">
             <div class="col-md-12">
@@ -67,6 +15,7 @@
           <div class="row">
              <div class="col-md-12">
                 <div class="titlepage">
+                  <h2 *ngIf = 'trainerShow'>Our Trainers</h2>
                    <p>Lorem Ipsum available, but the majority have suffered </p>
                 </div>
              </div>
@@ -109,7 +58,6 @@
        </div>
     </div>
     <!-- end trainers -->
-</ng-template>
 
 
 
